--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-node_modules/*
-.v8flags.5.5.372.43.d41d8cd98f00b204e9800998ecf8427e.json
-.pki/
-.config/pulse/*
-.idea/*
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
